<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/partiaLogoColor"
    tools:context=".ActivityQueryForPlanner">


    <TextView
        android:padding="16dp"
        android:id="@+id/textView_pageCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_4" />

    <TextView
        android:id="@+id/textView_Query"
        android:layout_width="225dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="92dp"
        android:layout_above="@id/rg"
        android:background="@drawable/button_bg_round"
        android:gravity="center"
        android:text="@string/what_s_the_occasion"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginBottom="35dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <RadioButton
            android:id="@+id/radio_button_op1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/birthday_party"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_button_op2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/bachelorette_party"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_button_op3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/gathering"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_button_op4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/gathering"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/rg"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_bg_round"
        android:onClick="next_btn_clicked"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>





